# nix-containers

./: .cz.toml  .editorconfig  .envrc  .gitignore  .taplo.toml  all.do  default.do  flake.nix  loads.do  manifest.do  pushs.do  streams.do
.github/workflows/: build.yml  publish.yml  update-flake-lock.yml
.reuse/: dep5
ctrs/: default.load.do  default.push.do  default.stream.do
ctrs/caddy/: default.nix
ctrs/cetusguard/: default.nix
ctrs/cf-zerotrust/: cloudflare.tf  default.nix  providers.tf  public-ips.tf
ctrs/cfdyndns/: default.nix  main.tf
ctrs/chrony/: default.nix
ctrs/coreutils/: default.nix
ctrs/docker-restart-unhealthy/: default.nix
ctrs/iperf3/: default.nix
ctrs/iproute2/: default.nix
ctrs/jellyfin/: default.nix
ctrs/komga/: default.nix  docker-compose.yaml
ctrs/netperf/: default.nix
ctrs/pbr/: default.nix  pbr
ctrs/protonvpn-qbittorrent-port-forward/: default.nix
ctrs/prowlarr/: default.nix
ctrs/qbittorrent-nox/: default.nix
ctrs/socat/: default.nix
ctrs/sonarr/: default.nix
ctrs/syncthing/: default.nix
ctrs/veloren/: default.nix
ctrs/veloren-healthcheck/: default.nix
ctrs/vrising/: Cargo.toml  default.nix
ctrs/vrising/src/: main.rs
ctrs/wireguard/: 0001-wg-quick-set-sysctl-only-if-necessary.patch  0001-wg-quick-set-sysctl-only-if-necessary.patch.license  0002-wg-quick-dont-use-iptables-raw-table.patch  default.nix
fp/: ctrs.nix  devshell.nix  layer-mtime.patch  layer-mtime.patch.license  pkgs.nix
pkgs/is-online/: default.nix  endpoints
pkgs/mk-s6-rc/: default.nix
pkgs/mk-s6-rc/rootfs/: init
(+26 files in other folders)
